# guile

./: .dir-locals.el  .gitignore  .guix-channel  ANON-CVS  AUTHORS  ChangeLog  GUILE-VERSION  HACKING  LICENSE  Makefile.am  Makefile.in  NEWS  README  README-win.txt  README.md  README.orig  THANKS  acconfig.h  acinclude.m4  aclocal.m4  appxmanifest.xml  autogen.sh  check-guile.in  configure  configure.ac  configure.in  guile-tools.in  guix.scm  libguile.h  ltmain.sh.patch  mkinstalldirs  pre-inst-guile-env.in  pre-inst-guile.in
.guix/: manifest.scm
am/: bootstrap.am  guilec
benchmark-suite/: local.mk
build-aux/: announce-gen  gendocs.sh  git-version-gen  gitlog-to-changelog  gnu-web-doc-update  gnupload  manifest.scm  useless-if-before-free  vc-list-files
doc/: ChangeLog  Makefile.am  Makefile.in  README  data-rep.texi  guile-api.alist  guile.texi  preface.texi
gc-benchmarks/: local.mk
guile-config/: ChangeLog  Makefile.am  Makefile.in  guile-config.in  guile.m4  qthreads.m4
guile-readline/: ChangeLog  LIBGUILEREADLINE-VERSION  Makefile.am  configure.ac  configure.in  readline.c  readline.h
ice-9/: ChangeLog  Makefile.am  Makefile.in  and-let-star-compat.scm  and-let-star.scm  arrays.scm  boot-9.scm  buffered-input.scm  calling.scm  channel.scm  common-list.scm  debug.scm  debugger.scm  documentation.scm  emacs.scm  expect.scm  format.scm  ftw.scm  getopt-long.scm  hcons.scm  history.scm  lineio.scm  ls.scm  mapping.scm  match.scm  networking.scm  null.scm  optargs.scm  poe.scm  popen.scm  posix.scm  pretty-print.scm  psyntax.ss  q.scm  r4rs.scm  r5rs.scm  rdelim.scm  receive.scm  regex.scm  runq.scm  (+13 more)
lib/: Makefile.am  accept.c  accept4.c  alignof.h  alloca.in.h  arpa_inet.in.h  asnprintf.c  assure.h  basename-lgpl.c  basename-lgpl.h  binary-io.c  binary-io.h  bind.c  btowc.c  byteswap.in.h  c-ctype.h  c-strcase.h  c-strcasecmp.c  c-strncasecmp.c  canonicalize-lgpl.c  ceil.c  cloexec.c  cloexec.h  close.c  connect.c  copysign.c  dirent.in.h  dirfd.c  dirname-lgpl.c  dirname.h  dup2.c  duplocale.c  fcntl.c  fcntl.in.h  filename.h  float+.h  float.c  float.in.h  floor.c  free.c  (+178 more)
libguile/: ChangeLog  Makefile.am  Makefile.in  UnicodeData.txt  __scm.h  _scm.h  alist.c  alist.h  alloca.c  arbiters.c  arbiters.h  array-handle.c  array-handle.h  array-map.c  array-map.h  arrays.c  arrays.h  async.c  async.h  backtrace.c  backtrace.h  bdw-gc.h  bitvectors.c  bitvectors.h  boolean.c  boolean.h  bytevectors.c  bytevectors.h  c-tokenize.lex  chars.c  chars.h  continuations.c  continuations.h  conv-integer.i.c  conv-uinteger.i.c  coop-defs.h  coop-threads.c  coop-threads.h  coop.c  custom-ports.c  (+236 more)
libguile-ltdl/: ChangeLog  Makefile.am  guile-ltdl.h  raw-ltdl.c  raw-ltdl.h
m4/: clock_time.m4  gnulib-cache.m4  gnulib-comp.m4  labels-as-values.m4
meta/: Makefile.am  build-env.in  guile.m4  uninstalled-env.in
module/: Makefile.am  guild.scm
module/analyzer/: analyze.scm  annotated-tree-il.scm  lexical-envs.scm  set-queue.scm  value-sets.scm
module/ice-9/: async-queue.scm  binary-ports.scm  boot-9.scm  command-line.scm  custom-ports.scm  epoll.scm  ethreads.scm  eval-string.scm  i18n.scm  popen.scm  ports.scm  pretty-print.scm  psyntax-pp.scm  psyntax.scm  sandbox.scm  session.scm  soft-ports.scm  suspendable-ports.scm  test.scm  thread-pool.scm  threads.scm
module/language/: sassy.scm
module/language/bytecode/: spec.scm
module/language/cps/: closure-conversion.scm  compile-bytecode.scm  contification.scm  cse.scm  dce.scm  dump.scm  effects-analysis.scm  guile-vm.scm  lower-primcalls.scm  optimize.scm  reify-primitives.scm  slot-allocation.scm  specialize-numbers.scm  type-fold.scm  types.scm  utils.scm
module/language/cps/guile-vm/: lower-primcalls.scm  reify-primitives.scm
module/language/elisp/: .dir-locals.el  bindings.scm  boot.el  compile-tree-il.scm  lexer.scm  parser.scm  runtime.scm  spec.scm
module/language/elisp/runtime/: function-slot.scm  macro-slot.scm  macros.scm  value-slot.scm
module/language/glil/: compile-sassy.scm
module/language/lua/: common.scm  compile-tree-il.scm  lexer.scm  notes.org  parser.scm  runtime.scm  spec.scm
module/language/lua/standard/: io.scm  math.scm  os.scm  table.scm
module/language/sassy/: spec.scm
module/language/tree-il/: analyze.scm  compile-bytecode.scm  compile-cps.scm  cps-primitives.scm  fix-letrec.scm  inlinable-exports.scm  peval.scm  primitives.scm
module/rnrs/arithmetic/: fixnums.scm
module/scheme/: base.scm
module/scripts/: snarf-check-and-output-texi.scm
module/srfi/: srfi-19.scm  srfi-9.scm
module/system/: foreign-library.scm  foreign.scm
module/system/base/: compile.scm  optimize.scm  target.scm
module/system/repl/: command.scm  common.scm  debug.scm
module/system/vm/: assembler.scm  disassembler.scm  linker.scm  traps.scm
module/texinfo/: reflection.scm
module/web/: client.scm  http.scm
module/web/server/: ethreads.scm  http.scm
oop/: Makefile.am  goops.scm
qt/: ChangeLog  Makefile.am  (+1 more)
stage1/: Makefile.am
test-suite/: ChangeLog  Makefile.am  guile-test  lib.scm
test-suite/standalone/: .gitignore  Makefile.am  test-asmobs  test-bad-identifiers  test-close-on-exec  test-command-line-encoding  test-define-race.c  test-extensions-lib.c  test-fast-slot-ref.in  test-ffi  test-ffi-lib.c  test-hashing.c  test-out-of-memory  test-require-extension  test-sassy  test-signal-fork  test-stack-overflow  test-system-cmds  test-unwind.c  test-use-srfi.in
test-suite/tests/: 00-repl-server.test  00-socket.test  alist.test  analyzer.test  and-let-star.test  array-map.test  arrays.test  asyncs.test  bit-operations.test  bitvectors.test  bytevectors.test  c-api.test  chars.test  coding.test  common-list.test  compiler.test  cross-compilation.test  curried-definitions.test  elisp-compiler.test  environments.test  error-handling.test  eval.test  exceptions.test  filesys.test  fluids.test  foreign.test  format.test  ftw.test  gc.test  goops.test  guardians.test  hash.test  hooks.test  i18n.test  import.test  linker.test  list.test  load.test  lua-eval-2.test  lua-eval-3.test  (+49 more)
(+141 files in other folders)
