SCM_TESTS = tests/alist.test			\
            tests/c-api.test			\
	    tests/chars.test			\
	    tests/guardians.test		\
	    tests/hooks.test			\
	    tests/interp.test			\
	    tests/list.test			\
	    tests/load.test			\
	    tests/numbers.test			\
	    tests/ports.test			\
	    tests/r4rs.test			\
	    tests/reader.test			\
	    tests/regexp.test			\
	    tests/strings.test			\
	    tests/time.test			\
	    tests/version.test			\
	    tests/weaks.test

EXTRA_DIST = guile-test lib.scm $(SCM_TESTS)
